// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`buildEscapeHatch TDD path (includeMockHandoff: true) snapshot: full TDD escape hatch 1`] = `
"
If two findings in this list contradict each other and you cannot satisfy both, do not guess.
Emit fixes for defects you can resolve, then output a line in this exact format:
UNRESOLVED: <brief explanation of which findings conflicted and why they cannot both be satisfied>

Before emitting UNRESOLVED, confirm none of Exceptions 1–4 apply.

**A missing-test or \`test-gap\` finding is never a false positive because a \`.nax/\` file exists.**
\`.nax/\` is nax's own artifact directory; \`.nax-acceptance.test.ts\` is generated scaffolding for the
acceptance gate — it is NOT source-tree test coverage. You may NOT cite any \`.nax/\`-resident file as
evidence that an acceptance criterion is already tested, and you may NOT emit UNRESOLVED on that basis.
The only valid response to a missing-test finding is to
author a real test under the package's resolved test path.

## Test-file edit exceptions

The "do not modify test files" rule has four narrow escape valves. Each requires a
declaration in your output. Outside these four cases the rule is absolute.

### Exception 1 — Lint-only edit

You MAY edit a test file ONLY when ALL of the following hold:
- The failing check is \`lint\` — not \`test\`, \`typecheck\`, \`semantic\`, or \`adversarial\`.
- Your edit removes or reformats a lint violation without altering any \`expect\`, \`assert\`,
  \`toBe\`, \`toEqual\`, \`toThrow\`, \`not.\`, or equivalent assertion call, its arguments, its
  input data, its mock setup, or its \`describe\`/\`it\`/\`test\` block text.
- If you are uncertain whether your edit is assertion-neutral, do NOT make it — emit
  \`UNRESOLVED\` instead.

Declare every lint-only test edit with:
\`\`\`
TEST_EDIT_REASON: lint_only
FILE: <test file path>
FINDING: <lint rule or message verbatim>
CHANGE: <before line> → <after line>
\`\`\`

### Exception 2 — PRD-contract mismatch

You MAY correct a test's argument arity, type, or return-handling ONLY when the test's
call contradicts a literal interface signature stated in this story's description or
acceptance criteria.

Declare every contract-mismatch edit with:
\`\`\`
TEST_EDIT_REASON: prd_contract
PRD_QUOTE: "<verbatim signature line from the story description or acceptance criteria>"
FILE: <test file path>
TEST_BEFORE: <offending call line>
TEST_AFTER: <corrected call line>
\`\`\`

Do NOT use this exception to change test logic, assertions, or mock setup — only call
signatures that directly contradict a quoted PRD interface.

### Exception 3 — Unrelated sibling spillover

When a lint or typecheck error is outside this story's intended scope, do NOT edit that
file. If the smallest package-local fix is required to satisfy this story's acceptance
criteria, you MAY make that fix instead. Otherwise declare:
\`\`\`
TEST_EDIT_REASON: sibling_scope
SIBLING_FILE: <file path>
FINDING: <error summary>
\`\`\`
and continue. Sibling-scope failures do not block your story.

### Exception 4 — Mock-structure handoff

Use ONLY when the only path to satisfy the ACs requires a structural test rewrite
that does NOT fit Exception 2. Two cases qualify:

  (a) Existing mocks are wrong — mocks reference primitives the new code bypasses,
      or assertion topology must change to match a new dispatch shape.

  (b) Required test-infrastructure does not yet exist and must be introduced —
      e.g. in-process fake servers, network-level request interception, hermetic
      fixture-backed HTTP, or equivalent. Applies whenever the AC describes a
      hermetic/fixture-backed test surface that the current test setup cannot
      satisfy without new infrastructure.

Declare with:
\`\`\`
TEST_EDIT_REASON: mock_structure
FILES: <comma-separated test file paths>
REASON: <one paragraph: which mock is wrong vs which dispatch the new code uses,
         or what infrastructure must be introduced>
\`\`\`

Rules:
- Do NOT make any edits yourself; the test-writer will fulfill.
- Do NOT also emit \`UNRESOLVED:\` in the same turn — this declaration IS the handoff.
- FILES must list real test files. Each path must exist and be a test file.
- Write each path exactly as it appears in the findings above (repository-relative).
  Paths that resolve under neither the repository root nor the package directory are
  rejected and the handoff is dropped — the findings then have no owner."
`;

exports[`buildEscapeHatch non-TDD path (includeMockHandoff: false) snapshot: full non-TDD escape hatch 1`] = `
"
If two findings in this list contradict each other and you cannot satisfy both, do not guess.
Emit fixes for defects you can resolve, then output a line in this exact format:
UNRESOLVED: <brief explanation of which findings conflicted and why they cannot both be satisfied>

Before emitting UNRESOLVED, confirm none of Exceptions 1–3 apply.

**A missing-test or \`test-gap\` finding is never a false positive because a \`.nax/\` file exists.**
\`.nax/\` is nax's own artifact directory; \`.nax-acceptance.test.ts\` is generated scaffolding for the
acceptance gate — it is NOT source-tree test coverage. You may NOT cite any \`.nax/\`-resident file as
evidence that an acceptance criterion is already tested, and you may NOT emit UNRESOLVED on that basis.
The only valid response to a missing-test finding is to
author a real test under the package's resolved test path.

## Test-file edit exceptions

The "do not modify test files" rule has three narrow escape valves. Each requires a
declaration in your output. Outside these three cases the rule is absolute.

### Exception 1 — Lint-only edit

You MAY edit a test file ONLY when ALL of the following hold:
- The failing check is \`lint\` — not \`test\`, \`typecheck\`, \`semantic\`, or \`adversarial\`.
- Your edit removes or reformats a lint violation without altering any \`expect\`, \`assert\`,
  \`toBe\`, \`toEqual\`, \`toThrow\`, \`not.\`, or equivalent assertion call, its arguments, its
  input data, its mock setup, or its \`describe\`/\`it\`/\`test\` block text.
- If you are uncertain whether your edit is assertion-neutral, do NOT make it — emit
  \`UNRESOLVED\` instead.

Declare every lint-only test edit with:
\`\`\`
TEST_EDIT_REASON: lint_only
FILE: <test file path>
FINDING: <lint rule or message verbatim>
CHANGE: <before line> → <after line>
\`\`\`

### Exception 2 — PRD-contract mismatch

You MAY correct a test's argument arity, type, or return-handling ONLY when the test's
call contradicts a literal interface signature stated in this story's description or
acceptance criteria.

Declare every contract-mismatch edit with:
\`\`\`
TEST_EDIT_REASON: prd_contract
PRD_QUOTE: "<verbatim signature line from the story description or acceptance criteria>"
FILE: <test file path>
TEST_BEFORE: <offending call line>
TEST_AFTER: <corrected call line>
\`\`\`

Do NOT use this exception to change test logic, assertions, or mock setup — only call
signatures that directly contradict a quoted PRD interface.

### Exception 3 — Unrelated sibling spillover

When a lint or typecheck error is outside this story's intended scope, do NOT edit that
file. If the smallest package-local fix is required to satisfy this story's acceptance
criteria, you MAY make that fix instead. Otherwise declare:
\`\`\`
TEST_EDIT_REASON: sibling_scope
SIBLING_FILE: <file path>
FINDING: <error summary>
\`\`\`
and continue. Sibling-scope failures do not block your story."
`;
